<resources>
    <string name="app_name">DoGod</string>
    <string name="join_us">Join Us</string>
    <string name="ForgotPassword"><u>Forgot your password?</u></string>
    <string name="Login">LOGIN</string>
    <string name="Password">Password</string>
    <string name="CreateAccount"><u>Create account</u></string>
    <string name="email">E-mail</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="bePartOfUs">Be part of US</string>
    <string name="register">Register</string>
    <string name="resetPassword">Reset Password</string>
    <string name="enterYourEmail">Enter your E-mail</string>
    <string name="reset">RESET</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_land">LandActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
