<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prodevsmx.dogod.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="66sp"
        android:textStyle="normal"
        android:layout_marginTop="26sp"
        android:layout_marginBottom="56sp"
        android:id="@+id/tvTitle"
        android:textColor="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvTitle"
        android:background="@drawable/email"
        android:layout_margin="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_toRightOf="@id/email_icon"
        android:textColorHint="@color/colorPrimaryLight">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:id="@+id/etEmail"/>

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/ivLockIcon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_centerVertical="true"
        android:background="@drawable/lock"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/email_icon"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tiEmail"
        android:layout_toRightOf="@id/ivLockIcon"
        android:layout_marginTop="35dp"
        android:textColorHint="@color/colorPrimaryLight">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textSize="20sp"
            android:id="@+id/etPassword"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        android:layout_below="@id/tiPassword"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/tvForgotPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorTextPrimary"
        android:background="@color/colorAccent"
        android:id="@+id/btnLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        android:layout_alignParentRight="true"
        android:id="@+id/tvCreateAccount"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@id/btnLogin"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"/>


</RelativeLayout>
