<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prodevsmx.dogod.resetPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:layout_centerHorizontal="true"
        android:textSize="46sp"
        android:layout_margin="26dp"
        android:id="@+id/tvResetPassword"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterYourEmail"
        android:layout_below="@id/tvResetPassword"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_ingresa"
        android:textColor="@color/colorPrimaryLight"/>


    <ImageView
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="@drawable/email"
        android:layout_below="@id/tv_ingresa"
        android:layout_marginTop="56dp"
        android:id="@+id/iv_email"
        android:layout_marginLeft="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_email_restablecer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ingresa"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/iv_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="26sp"
            android:id="@+id/et_email" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/reset"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"/>

</RelativeLayout>
